created Authentication Controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=3306
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+# Hibernate ddl auto (create, create-drop, update, validate (validate-for production))
 spring.jpa.hibernate.ddl-auto=update
+# Show or not log for each sql query
+#spring.jpa.show-sql=true
 
 # App Properties
 example.app.jwtSecret= =======================irenkia=Spring===========================
