--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=3306
+#spring.datasource.url=jdbc:mysql:///ebdb
+#spring.datasource.username=ebroot
+#spring.datasource.password=12345678
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 # Hibernate ddl auto (create, create-drop, update, validate (validate-for production))
