new changed dependencies

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
     show-sql: 'true'
     hibernate:
       ddl-auto: update
+      dialect: org.hibernate.dialect.SQLServer2012Dialect
 logging:
   level:
     org:
@@ -14,5 +15,6 @@ logging:
         SQL: DEBUG
 server:
   port: 9191
+
 
 
